Scroll fixes:  * IScroll scroller into all swiper slides  * refreshScrollerAndScrollToFocusedAddElement callback function to add <item>... submit functions  * removed scrollToItems list watchers from scrollToDirective

--- a/frontend/core/src/main/webapp/static/app/notes/addNote.html
+++ b/frontend/core/src/main/webapp/static/app/notes/addNote.html
@@ -1,4 +1,4 @@
-<form class="swiper-no-swiping add-element" role="form" name="addNoteForm" ng-submit="addNote(newNote)">
+<form class="swiper-no-swiping add-element" role="form" name="addNoteForm" ng-submit="addNote(newNote, refreshScrollerAndScrollToFocusedAddElement)">
   <div class="form-group" editable-field-container="disable">
     <label class="sr-only" for="noteTitle">title</label>
     <div>
