--- a/frontend/core/src/main/webapp/static/app/notes/unsorted.html
+++ b/frontend/core/src/main/webapp/static/app/notes/unsorted.html
@@ -6,7 +6,7 @@
         <div id="wrapper" style="height: 100%; position: absolute;" scroll-to="notes">
           <div id="scroller" style="min-height: 101%">
             <div class="inner-page-content-container" accordion>
-              <div ng-if="showContent('notes')" ng-repeat="note in scrollToItems = (notes | itemsFilter:{name:'unsorted'})" ng-init="newNote = {}">
+              <div ng-if="showContent('notes')" ng-repeat="note in notes | itemsFilter:{name:'unsorted'}" ng-init="newNote = {}">
                 <div accordion-title="note" edit-item="editNote(note)" edit-item-title="editNoteTitle(note)" has-complete="false" toggle-complete>
                   <div ng-if="note.content" class="teaser">
                     <a href id="note-teaser" ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
@@ -17,7 +17,7 @@
                 </div>
                 <div ng-if="!note.content" class="teaser-empty"></div>
               </div>
-              <div ng-include="'static/app/notes/addNote.html'" onload="scrollerIncludeContentLoaded()"></div>
+              <div ng-include="'static/app/notes/addNote.html'"></div>
             </div>
           </div>
         </div>
