--- a/frontend/core/src/main/webapp/static/app/base/listsOverview.html
+++ b/frontend/core/src/main/webapp/static/app/base/listsOverview.html
@@ -8,10 +8,10 @@
       </a>
     </li>
     <li>
-      <form class="swiper-no-swiping add-element" role="form" name="addListForm" ng-submit="addList(newList)" autocapitalize="none" autocorrect="off">
+      <form class="swiper-no-swiping add-element" role="form" name="addListForm" ng-submit="addList(newList, refreshScrollerAndScrollToFocusedAddElement)" autocapitalize="none" autocorrect="off">
         <div class="form-group" editable-field-container="disable">
           <label class="sr-only" for="listTitle">title</label>
-          <input type="text" class="simple-input" id="listTitle" ng-model="newList.title" placeholder="add list..." editable-field></input>
+          <input type="text" id="listTitle" class="simple-input" ng-model="newList.title" placeholder="add list..." editable-field></input>
         </div>
       </form>
     </li>
