--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -7,7 +7,7 @@
           <div id="scroller" style="min-height: 101%">
             <div class="accordion-wrapper">
               <div class="inner-page-content-container" accordion>
-                <div ng-if="showContent('inbox')" ng-repeat="item in scrollToItems = items">
+                <div ng-if="showContent('inbox')" ng-repeat="item in items">
                   <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" has-complete="false" toggle-complete></div>
                   <div ng-if="isOpen(item)" class="accordion-body" editable-field-container="auto">
                     <div class="accordion-inner" ng-include="'static/app/main/itemActions.html'"></div>
@@ -15,7 +15,7 @@
                 </div>
               </div>
             </div>
-            <form class="add-element" role="form" name="itemToInbox" ng-init="newItem = {}" ng-submit="addNewItem(newItem)" autocapitalize="none" autocorrect="off">
+            <form class="add-element" role="form" name="itemToInbox" ng-init="newItem = {}" ng-submit="addNewItem(newItem, refreshScrollerAndScrollToFocusedAddElement)" autocapitalize="none" autocorrect="off">
               <div class="form-group" editable-field-container="disable">
                 <label class="sr-only" for="itemTitle">title</label>
                 <div>
