--- a/frontend/core/src/main/webapp/static/app/tasks/addTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/addTask.html
@@ -1,4 +1,4 @@
-<form class="swiper-no-swiping add-element" role="form" name="addTaskForm" ng-submit="addSubtask(subtask)" autocapitalize="none" autocorrect="off">
+<form class="swiper-no-swiping add-element" role="form" name="addTaskForm" ng-submit="addSubtask(subtask, refreshScrollerAndScrollToFocusedAddElement)" autocapitalize="none" autocorrect="off">
   <div class="form-group" editable-field-container="disable">
     <label class="sr-only" for="taskTitle">title</label>
     <div>
