--- a/frontend/core/src/main/webapp/static/app/tasks/details.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/details.html
@@ -13,13 +13,13 @@
                     <div ng-if="isOpen(list)" class="accordion-body" editable-field-container="auto">
                       <div class="accordion-inner" ng-include="'static/app/base/listActions.html'"></div>
                     </div>
-                    <div ng-if="showContent('tasks')" ng-repeat="task in scrollToItems = (tasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid})">
+                    <div ng-if="showContent('tasks')" ng-repeat="task in tasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid}">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                       <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
                         <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
                       </div>
                     </div>
-                    <div ng-include="'static/app/tasks/addTask.html'" onload="scrollerIncludeContentLoaded()"></div>
+                    <div ng-include="'static/app/tasks/addTask.html'"></div>
                   </div>
                 </div>
               </section>
@@ -47,13 +47,13 @@
                         </ul>
                       </div>
                     </div>
-                    <div ng-if="showContent('tasks')" ng-repeat="task in scrollToItems = (tasks | itemsFilter:{name:'byContextUUID', filterBy: context.uuid})">
+                    <div ng-if="showContent('tasks')" ng-repeat="task in tasks | itemsFilter:{name:'byContextUUID', filterBy: context.uuid}">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                       <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
                         <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
                       </div>
                     </div>
-                    <div ng-include="'static/app/tasks/addTask.html'" onload="scrollerIncludeContentLoaded('tasks/details/' + context.uuid)"></div>
+                    <div ng-include="'static/app/tasks/addTask.html'"></div>
                   </div>
                 </div>
               </section>
@@ -66,13 +66,13 @@
                   <h3>unsorted</h3>
                   <div>
                     <div class="inner-page-content-container" accordion>
-                      <div ng-if="showContent('tasks')" ng-repeat="task in scrollToItems = (tasks | itemsFilter:{name:'unsorted'})" ng-init="subtask = {}">
+                      <div ng-if="showContent('tasks')" ng-repeat="task in tasks | itemsFilter:{name:'unsorted'}" ng-init="subtask = {}">
                         <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                         <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
                           <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
                         </div>
                       </div>
-                      <div ng-include="'static/app/tasks/addTask.html'" onload="scrollerIncludeContentLoaded('tasks/details/unsorted')"></div>
+                      <div ng-include="'static/app/tasks/addTask.html'"></div>
                     </div>
                   </div>
                 </div>
