--- a/frontend/core/src/main/webapp/static/app/tasks/overview.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/overview.html
@@ -2,29 +2,33 @@
   <div class="column">
     <div class="page-heading swiper-no-swiping" ng-init="heading = 'overview'; omnibarFeature = 'tasks'" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-hide="omnibarVisible && isActiveSlide('overview')" class="content-container page-content-container omnibar-animation">
-      <div class="inner-page-content-container">
-        <div ng-include="'static/app/base/listsOverview.html'" include-replace></div>
-        <section ng-init="newContext={title:undefined, tagType:'context'}">
-          <h3><a href class="page-header" ng-click="gotoContexts()">contexts</a></h3>
-          <ul class="list-arrow-right">
-            <li ng-show="contexts.length" ng-repeat="context in contexts">
-              <a href class="click-to-slide" ng-click="gotoDetails(context.uuid)">
-                <span class="link-title">@{{context.title}}</span><span class="icon-arrow-right"></span>
-              </a>
-            </li>
-            <li>
-              <form class="swiper-no-swiping add-element" role="form" name="addContextForm" ng-submit="addContext(newContext)" autocapitalize="none" autocorrect="off">
-                <div class="form-group" editable-field-container="disable">
-                  <label class="sr-only" for="contextTitle">title</label>
-                  <input type="text" id="contextTitle" class="simple-input" ng-model="newContext.title" placeholder="add context..." editable-field></input>
-                </div>
-              </form>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h3><a href class="page-header" ng-click="gotoDetails('unsorted')">unsorted</a></h3>
-        </section>
+      <div id="wrapper" scroll-to="tasks/overview" style="height: 100%;">
+        <div id="scroller" style="min-height: 101%">
+          <div class="inner-page-content-container">
+            <div ng-include="'static/app/base/listsOverview.html'" include-replace></div>
+            <section ng-init="newContext={title:undefined, tagType:'context'}">
+              <h3><a href class="page-header" ng-click="gotoContexts()">contexts</a></h3>
+              <ul class="list-arrow-right">
+                <li ng-show="contexts.length" ng-repeat="context in contexts">
+                  <a href class="click-to-slide" ng-click="gotoDetails(context.uuid)">
+                    <span class="link-title">@{{context.title}}</span><span class="icon-arrow-right"></span>
+                  </a>
+                </li>
+                <li>
+                  <form class="swiper-no-swiping add-element" role="form" name="addContextForm" ng-submit="addContext(newContext, refreshScrollerAndScrollToFocusedAddElement)" autocapitalize="none" autocorrect="off">
+                    <div class="form-group" editable-field-container="disable">
+                      <label class="sr-only" for="contextTitle">title</label>
+                      <input type="text" id="contextTitle" class="simple-input" ng-model="newContext.title" placeholder="add context..."></input>
+                    </div>
+                  </form>
+                </li>
+              </ul>
+            </section>
+            <section>
+              <h3><a href class="page-header" ng-click="gotoDetails('unsorted')">unsorted</a></h3>
+            </section>
+          </div>
+        </div>
       </div>
     </div>
   </div>
