Removed unnecessary duplicate backdrop in editlist

--- a/frontend/core/src/main/webapp/static/app/base/editList.html
+++ b/frontend/core/src/main/webapp/static/app/base/editList.html
@@ -1,4 +1,4 @@
-<div id="edit-page" editable-field-backdrop>
+<div id="edit-page">
   <header class="edit-header" edit-header="list" item-edit-form="listEdit" save-item="saveList(list)" cancel-edit="cancelEdit()"></header>
   <section id="edit-list" class="one-column-grid page">
     <div class="column">
