* addItemDirective:  * register add item element to scroller to scroll to focused element  * toggle swiper-no-swiping and data-snap-ignore in focused/blurred add item element  * replaced add<Item> method with callAndRefresh method  * removed mouse swipe support from swiper by setting simulateTouch swiper parameter to false  * removed mouse swipe support from IScroll by setting disablemouse option to true  * scrollToDirective supports multiple add item element
* decreased scroller swipe to next/previous slide threshold from 70px to 60px
* prevent swiper and snap.js drawer in accordion with swiper-no-swiping class and data-snap-ignore attribute

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -69,6 +69,7 @@
     <script src="static/app/base/UISessionService.js"></script>
     <script src="static/app/base/UserSessionService.js"></script>
     <script src="static/app/base/accordionDirective.js"></script>
+    <script src="static/app/base/addItemDirective.js"></script>
     <script src="static/app/base/accordionTitleDirective.js"></script>
     <script src="static/app/base/expandingTextareaDirective.js"></script>
     <script src="static/app/base/featureContainerDirective.js"></script>
