--- a/frontend/core/src/main/webapp/static/app/base/listActions.html
+++ b/frontend/core/src/main/webapp/static/app/base/listActions.html
@@ -1,4 +1,4 @@
-<ul class="button-row">
+<ul class="button-row swiper-no-swiping" data-snap-ignore="true">
   <li class="button-container left-of-three border-right">
     <button type="button" class="normal-button" ng-click="closeAndCall(list, listQuickEditDone)">
       done
