--- a/frontend/core/src/main/webapp/static/app/tasks/details.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/details.html
@@ -31,7 +31,7 @@
                 <div id="scroller" style="min-height: 101%">
                   <div class="inner-page-content-container" accordion>
                     <div accordion-title="context" edit-item="editContext(context)" edit-item-title="editContextTitle(context)" bold-title="true" title-prefix="'@'" has-complete="false" toggle-complete></div>
-                    <div ng-if="isOpen(context)" class="accordion-body" editable-field-container="auto">
+                    <div ng-if="isOpen(context)" class="accordion-body swiper-no-swiping" editable-field-container="auto">
                       <div class="accordion-inner">
                         <ul class="button-row">
                           <li class="button-container left-of-two border-right">
