--- a/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
@@ -1,4 +1,4 @@
-<div id="taskCoreFields">
+<div id="taskCoreFields" class="swiper-no-swiping" data-snap-ignore="true">
 
   <div class="form-group">
     <div ng-if="showDateInput">
