--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -15,11 +15,11 @@
                 </div>
               </div>
             </div>
-            <form class="add-element" role="form" name="itemToInbox" ng-init="newItem = {}" ng-submit="addNewItem(newItem, refreshScrollerAndScrollToFocusedAddElement)" autocapitalize="none" autocorrect="off">
+            <form class="add-element" role="form" name="itemToInbox" ng-init="newItem = {}" ng-submit="callAndRefresh(addNewItem, newItem)" autocapitalize="none" autocorrect="off" add-item data-snap-ignore="{{ignoreSnap}}">
               <div class="form-group" editable-field-container="disable">
                 <label class="sr-only" for="itemTitle">title</label>
                 <div>
-                  <input type="text" id="itemTitle" class="simple-input" ng-model="newItem.title" ng-blur="blurredAddElement()" ng-focus="focusedAddElement($event)" placeholder="add item..." maxlength="128" editable-field></input>
+                  <input type="text" id="itemTitle" class="simple-input" ng-model="newItem.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add item..." maxlength="128" editable-field></input>
                 </div>
               </div>
             </form>
