--- a/frontend/core/src/main/webapp/static/app/main/itemActions.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemActions.html
@@ -1,5 +1,5 @@
 <div ng-switch="itemType">
-  <div class="item-actions" ng-switch-default>
+  <div class="item-actions swiper-no-swiping" data-snap-ignore="true" ng-switch-default>
     <ul class="button-row">
       <li class="button-container left-of-four">
         <button class="default-button" type="button" ng-click="itemToTask(item)">
