--- a/frontend/core/src/main/webapp/static/app/notes/noteActions.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteActions.html
@@ -1,4 +1,4 @@
-<div>
+<div class="swiper-no-swiping" data-snap-ignore="true">
   <div ng-include="'static/app/notes/noteCoreFields.html'"></div>
   <div class="item-actions">
     <ul class="button-row">
