--- a/frontend/core/src/main/webapp/static/app/notes/noteCoreFields.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteCoreFields.html
@@ -1,4 +1,4 @@
-<div id="noteCoreFields">
+<div id="noteCoreFields" class="swiper-no-swiping" data-snap-ignore="true">
   <div class="form-group">
     <label class="sr-only" for="noteParent">parent</label>
     <select class="simple-input swiper-no-swiping" id="noteParent" ng-model="note.relationships.list" ng-options="list.uuid as list.title for list in lists">
