--- a/frontend/core/src/main/webapp/static/app/tasks/addTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/addTask.html
@@ -1,8 +1,8 @@
-<form class="swiper-no-swiping add-element" role="form" name="addTaskForm" ng-submit="addSubtask(subtask, refreshScrollerAndScrollToFocusedAddElement)" autocapitalize="none" autocorrect="off">
+<form class="add-element" role="form" name="addTaskForm" ng-submit="callAndRefresh(addSubtask, subtask)" autocapitalize="none" autocorrect="off" add-item data-snap-ignore="{{ignoreSnap}}">
   <div class="form-group" editable-field-container="disable">
     <label class="sr-only" for="taskTitle">title</label>
     <div>
-      <input type="text" id="taskTitle" class="simple-input" ng-model="subtask.title" ng-blur="blurredAddElement()" ng-focus="focusedAddElement($event)" placeholder="add task..." maxlength="128" editable-field></input>
+      <input type="text" id="taskTitle" class="simple-input" ng-model="subtask.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add task..." maxlength="128" editable-field></input>
     </div>
   </div>
 </form>
