--- a/frontend/core/src/main/webapp/static/app/base/accordionTitle.html
+++ b/frontend/core/src/main/webapp/static/app/base/accordionTitle.html
@@ -1,13 +1,19 @@
 <div class="accordion-title" ng-switch="isOpen">
   <div ng-switch-when="false" id="closedAccordionTitleWrapper">
-    <div ng-if="hasComplete" class="table-wrapper">
+    <div ng-if="hasComplete" class="table-wrapper" >
       <input type="checkbox" class="left-checkbox-wrapper" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" ng-click="itemChecked()" />
       <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
-      <a id="accordionTitleLink" ng-class="getTitleInputClasses()" class="accordion-toggle" href ng-click="clickTitle()">{{getItemTitle()}}</a>
+      <a id="accordionTitleLink" ng-class="getTitleLinkClasses()" class="accordion-toggle" href ng-click="clickTitle()">
+        <span id="accordionTitleLinkContent">
+        {{getItemTitle()}}
+        </span>
+      </a>
     </div>
     <div ng-if="!hasComplete" id="soloAccordionTitleLinkWrapper" class="table-wrapper">
       <div id="accordionTitleHeightFix"><br/></div>
-      <a id="accordionTitleLink" ng-class="getTitleInputClasses()" class="accordion-toggle" href ng-click="clickTitle()">{{getItemTitle()}}</a>
+      <a id="accordionTitleLink" ng-class="getTitleLinkClasses()" class="accordion-toggle" href ng-click="clickTitle()">
+        <span id="accordionTitleLinkContent">{{getItemTitle()}}</span>
+      </a>
     </div>
   </div>
   <form ng-switch-when="true" role="form" name="itemTitleEdit" class="table-wrapper accordion-title-open" ng-class="!hasComplete && 'no-checkbox'" editable-field-container="auto" data-snap-ignore="true">
