Dashboard feature boilerplate:  * renamed NavbarController to FooterController     * initialize feature slides' headings and slide path fragments  * set last-feature id to menu item based on userType  * show/hide plus button from page header depending on feature     * set both omnibar heading edges/left edge to fade white  * refactored footer.html to use generic left, center and right slide methods  * refactor

--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -9,8 +9,11 @@
     <li>
       <a href class="feature-link" ng-class="getFeatureClass('notes')" ng-click="gotoFeature('notes')">notes</a>
     </li>
-    <li id="last-feature">
+    <li id="{{isAdmin() ? '' : 'last-feature'}}">
       <a href class="feature-link" ng-class="getFeatureClass('inbox')" ng-click="gotoFeature('inbox')">inbox</a>
+    </li>
+    <li ng-if="isAdmin()" id="last-feature">
+      <a href class="feature-link" ng-class="getFeatureClass('dashboard')" ng-click="gotoFeature('dashboard')">dashboard</a>
     </li>
     <li ng-show="useCollectives()" id="my">
       <a href ng-class="getMyClass()" ng-click="setMyActive()">my information</a>
