--- a/frontend/core/src/main/webapp/static/app/account/account.html
+++ b/frontend/core/src/main/webapp/static/app/account/account.html
@@ -16,6 +16,10 @@
             <input class="input-checkbox" type="checkbox" name="checkbox" id="showOnboarding" ng-model="settings.showOnboarding" ng-change="showOnboardingChecked(settings.showOnboarding)"/>
             <label class="default-element" for="showOnboarding">show onboarding again on next login</label>
           </li>
+          <li ng-if="showOnboardingSetting()" class="simple-content">
+            <input class="input-checkbox" type="checkbox" name="checkbox" id="hidePlus" ng-model="settings.hidePlus" ng-change="hidePlus(settings.hidePlus)"/>
+            <label class="default-element" for="hidePlus">hide plus button</label>
+          </li>
         </ul>
       </div>
     </div>
