Dashboard:  * initialize only first slide and register swiperCreated callback in SwiperService to initialize rest of the slides  * merged dashboard slides into dashboardSlide template and dashboardSlideDirective and removed single dashboard templates  * public getFirstDateOfTheWeek and getFirstDateOfTheMonth methods in DateService
* Fixed NoteService getArchivedNotes method to return archivedNotes array instead of activeNotes array
* MockTaskBackendService mockCompleteTask method sets current time to task's complete key
* Refactoring

--- a/frontend/core/src/main/webapp/static/app/dashboard/dashboardSlides.html
+++ b/frontend/core/src/main/webapp/static/app/dashboard/dashboardSlides.html
@@ -1,8 +1,8 @@
-<div ng-show="isFeatureActive('dashboard')" class="swiper-container main-slides" swiper-container="dashboard" swiper-type="main" expected-slides=3>
+<div ng-show="isFeatureActive('dashboard')" class="swiper-container main-slides" swiper-container="dashboard" swiper-type="main" expected-slides=dashboardSlides.length ng-controller="DashboardController">
   <div ng-hide="isDesktop && isMenuOpen" class="swiper-wrapper">
-    <div class="swiper-slide" swiper-slide="dashboard/daily" slide-index=0 snap-drawer-drag="dashboard" ng-include="'static/app/dashboard/daily.html'"></div>
-    <div class="swiper-slide" swiper-slide="dashboard/weekly" slide-index=1 ng-include="'static/app/dashboard/weekly.html'"></div>
-    <div class="swiper-slide" swiper-slide="dashboard/monthly" slide-index=1  ng-include="'static/app/dashboard/monthly.html'"></div>
+    <div class="swiper-slide" swiper-slide="dashboard/daily" slide-index=0 dashboard-slide="daily" snap-drawer-drag="dashboard"></div>
+    <div class="swiper-slide" swiper-slide="dashboard/weekly" slide-index=1 dashboard-slide="weekly"></div>
+    <div class="swiper-slide" swiper-slide="dashboard/monthly" slide-index=2 dashboard-slide="monthly"></div>
   </div>
   <div ng-if="isDesktop && isMenuOpen" id="desktop-menu" class="desktop-menu-animation" ng-include="'static/app/auth/menu.html'"></div>
 </div>
