--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -117,6 +117,9 @@
     <script src="static/app/admin/AdminController.js"></script>
     <script src="static/app/admin/AdminService.js"></script>
 
+    <script src="static/app/dashboard/DashboardController.js"></script>
+    <script src="static/app/dashboard/dashboardSlideDirective.js"></script>
+
     <script src="static/lib/snap.js"></script>
     <script src="static/lib/fastclick.js"></script>
 
@@ -131,12 +134,12 @@
     <script src="test/mock/MockTagsBackendService.js"></script>
     <script src="test/mock/MockTasksBackendService.js"></script>
     <script>
-        function MockController(MockBackendService) {
-          MockBackendService.mockBackend();
-      }
+        function MockController(MockBackendService, SwiperService) {
+            MockBackendService.mockBackend();
+        }
 
-      MockController.$inject = ['MockBackendService'];
-      angular.module('em.appTest').factory('MockController', MockController);
-  </script>
+        MockController.$inject = ['MockBackendService', 'SwiperService'];
+        angular.module('em.appTest').factory('MockController', MockController);
+    </script>
 </body>
 </html>
