--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -107,6 +107,7 @@
 
     <script src="static/app/main/editHeaderDirective.js"></script>
     <script src="static/app/main/HeaderController.js"></script>
+    <script src="static/app/main/InboxController.js"></script>
     <script src="static/app/main/ItemsController.js"></script>
     <script src="static/app/main/ItemsService.js"></script>
     <script src="static/app/main/MainController.js"></script>
