--- a/frontend/core/src/main/webapp/static/app/dashboard/dashboardSlides.html
+++ b/frontend/core/src/main/webapp/static/app/dashboard/dashboardSlides.html
@@ -1,8 +1,8 @@
 <div ng-show="isFeatureActive('dashboard')" class="swiper-container main-slides" swiper-container="dashboard" swiper-type="main" expected-slides=dashboardSlides.length ng-controller="DashboardController">
   <div ng-hide="isDesktop && isMenuOpen" class="swiper-wrapper">
     <div class="swiper-slide" swiper-slide="dashboard/daily" slide-index=0 dashboard-slide="daily" snap-drawer-drag="dashboard"></div>
-    <div class="swiper-slide" swiper-slide="dashboard/weekly" slide-index=1 dashboard-slide="weekly"></div>
-    <div class="swiper-slide" swiper-slide="dashboard/monthly" slide-index=2 dashboard-slide="monthly"></div>
+    <div ng-if="dashboardSlides.length === 3" class="swiper-slide" swiper-slide="dashboard/weekly" slide-index=1 dashboard-slide="weekly"></div>
+    <div ng-if="dashboardSlides.length === 3" class="swiper-slide" swiper-slide="dashboard/monthly" slide-index=2 dashboard-slide="monthly"></div>
   </div>
   <div ng-if="isDesktop && isMenuOpen" id="desktop-menu" class="desktop-menu-animation" ng-include="'static/app/auth/menu.html'"></div>
 </div>
