First version of archive  * grouped consecutive menu entries with ng-if or ng-show/hide inside single conditional div  * decreased left and right footer link right and left padding respectively to make room for longer title names

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -118,6 +118,8 @@
     <script src="static/app/admin/AdminController.js"></script>
     <script src="static/app/admin/AdminService.js"></script>
 
+    <script src="static/app/archive/ArchiveController.js"></script>
+
     <script src="static/app/dashboard/DashboardController.js"></script>
     <script src="static/app/dashboard/dashboardSlideDirective.js"></script>
 
