--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -12,6 +12,7 @@
   <div ng-if="isFeatureActive('listEdit')" ng-include="'static/app/base/editList.html'" include-replace></div>
   <div ng-if="isFeatureActive('contextEdit')" ng-include="'static/app/base/editContext.html'" include-replace></div>
   <div ng-if="isFeatureActive('dashboard')" ng-include="'static/app/dashboard/dashboardSlides.html'" include-replace></div>
+  <div ng-if="isFeatureActive('archive')" ng-include="'static/app/archive/archiveSlides.html'" include-replace></div>
   <div ng-if="isFeatureActive('account') && !isContentFeatureActive()" ng-include="'static/app/account/account.html'" include-replace></div>
   <div ng-if="isFeatureActive('about') && !isContentFeatureActive()" ng-include="'static/app/base/about.html'" include-replace></div>
   <div ng-if="isFeatureActive('admin') && !isContentFeatureActive()" ng-include="'static/app/admin/admin.html'" include-replace></div>
