--- a/frontend/core/src/main/webapp/static/app/tasks/timeline.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/timeline.html
@@ -3,12 +3,31 @@
     <div class="page-heading swiper-no-swiping" ng-init="heading = 'timeline'; omnibarFeature = 'tasks'" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-if="!isLoading" ng-hide="omnibarVisible && isActiveSlide('home')" class="content-container page-content-container omnibar-animation">
       <div ng-if="isDatepickerVisible" class="swiper-no-swiping" data-snap-ignore="true" datepicker></div>
-      <div class="swiper-container vertical-slides" swiper-container="tasks/home" swiper-type="page" swiper-container-only-external-swipe="true" expected-slides="weekdays.length">
+      <div class="swiper-container vertical-slides" swiper-container="tasks/home" swiper-type="page" expected-slides="weekdays.length">
         <div class="swiper-wrapper">
+          <div id="pull-to-previous" class="loader">
+            <span>previous week...</span>
+          </div>
           <div class="swiper-slide" ng-repeat="date in weekdays track by date.weekdayIndex" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index">
             <div class="inner-slide-content-container">
-              <div ng-include="'static/app/tasks/date.html'" include-replace></div>
+              <section id="date" class="date">
+                <h3 ng-hide="isDatepickerVisible" class="date-heading" ng-click="setDatepickerVisible()">{{date.displayDate}}</h3>
+                <div>
+                  <div class="inner-page-content-container" accordion>
+                    <div ng-if="showContent('tasks')" ng-repeat="task in tasks | tasksByDate:date.yyyymmdd">
+                      <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+                      <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
+                        <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+                      </div>
+                    </div>
+                    <div ng-include="'static/app/tasks/addTask.html'"></div>
+                  </div>
+                </div>
+              </section>
             </div>
+          </div>
+          <div id="pull-to-next" class="loader">
+            <span>next week...</span>
           </div>
         </div>
       </div>
